--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,12 @@
 language: android
 android:
   components:
-    - tools
-    - build-tools-23.0.1
-    - android-23
- 
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-19
-    - extra-android-support
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
-    - sys-img-armeabi-v7a-android-17
-   
- licenses:
+    - build-tools-20.0.0
+    - android-L
+    - sys-img-armeabi-v7a-android-tv-l
+    - add-on
+    - extra
+  licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
