--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: android
 android:
   components:
-    - build-tools-20.0.0
-    - android-L
+     # Update Android SDK Tools
+    - tools
+    - build-tools-23.0.1
+    - android-23
     - sys-img-armeabi-v7a-android-tv-l
     - add-on
     - extra
