--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ android:
     - sys-img-armeabi-v7a-android-tv-l
     - add-on
     - extra
+    - extra-android-support
+    - extra-android-m2repository
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
